--- a/apps/ui/src/app.html
+++ b/apps/ui/src/app.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html class="h-full bg-gray-100">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    %sveltekit.head%
-  </head>
-  <body class="h-full">
-    %sveltekit.body%
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        %sveltekit.head%
+    </head>
+    <body class="h-full">
+        <div class="contents">%sveltekit.body%</div>
+    </body>
 </html>
